--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--Midterm Exam (10 points) -- Each of the following steps is worth one point as you build an online resume:
   1. Add a title tag to name the page with your name, ie. xtine burrough resume
   2. Add a first-level heading to the page with your name
@@ -20,9 +21,32 @@
   11. Bonus point: Add an image of yourself or of one of your artworks to the page
   12. Second bonus point: Create your resume as a two-column grid, centered in the page (for people really diving into Bootstrap already)
   -->
+
+  <title>Jackson R. O'Connor's Resume</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <style>
+    body {background-color: rgb(236, 236, 236); scrollbar-color: gray; font-family:'Times New Roman', Times, serif; color: black;}
+    h1 {color: black; font-weight: bold; text-align: center;}
+    h2 {color: black; font-weight: bold; text-align: center;}
+    p {color:rgb(22, 22, 22); font-weight: normal; text-align: left;}
+  </style>
   
 </head>
 <body>
+  <div class="container">
+    <h1>Jackson Richard O'Connor</h1>
+    <p>My name is Jackson O'Connor, an aspiring game designer &par; Environmental and Level Design<br>are my focus and my method of expression.</p>
+    <h2>Education</h2>
+    <ul>
+      <li>University of Texas at Dallas - BA in Animation and Games</li>
+    </ul>
+    <h2>Employment</h2>
+    <ul>
+      <li><a rel="https://tomthumb.com">TomThumb</a> - Courtesy Clerk - 3 Years &VerticalLine;Ongoing&VerticalLine;;</li>
+    </ul>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
   
 
 </body>
