Span style border tweaks

--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
 </head>
 <body>
   <div class="container">
-    <h1>Jackson Richard O'Connor</h1>
-    <p>My name is Jackson O'Connor, an aspiring game designer &par; Environmental and Level Design<br>are my focus and my method of expression.</p>
-    <h2>Education</h2>
-    <ul>
-      <li>University of Texas at Dallas - BA in Animation and Games</li>
-    </ul>
-    <h2>Employment</h2>
-    <ul>
-      <li><a rel="https://tomthumb.com">TomThumb</a> - Courtesy Clerk - 3 Years &VerticalLine;Ongoing&VerticalLine;;</li>
-    </ul>
+    <span style="border: 0.2cm; overflow-inline: auto;">
+      <h1>Jackson Richard O'Connor</h1>
+      <p>My name is Jackson O'Connor, an aspiring game designer &par; Environmental and Level Design<br>are my focus and my method of expression.</p>
+      <h2>Education</h2>
+      <ul>
+        <li>University of Texas at Dallas - BA in Animation and Games</li>
+      </ul>
+      <h2>Employment</h2>
+      <ul>
+        <li><a rel="https://tomthumb.com">TomThumb</a> - Courtesy Clerk - 3 Years &VerticalLine;Ongoing&VerticalLine;;</li>
+      </ul>
+    </span>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
