centering content and adding top border

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     body {background-color: rgb(236, 236, 236); scrollbar-color: gray; font-family:'Times New Roman', Times, serif; color: black;}
     h1 {color: black; font-weight: bold; text-align: center;}
     h2 {color: black; font-weight: bold; text-align: center;}
-    p {color:rgb(22, 22, 22); font-weight: normal; text-align: left;}
+    p {color:rgb(22, 22, 22); font-weight: normal; text-align: center;}
   </style>
   
 </head>
 <body>
   <div class="container">
-    <span style="border: 0.2cm; overflow-inline: auto;">
+    <span style="border: 0.2cm; overflow-inline: auto; border-top: 0.6cm;">
       <h1>Jackson Richard O'Connor</h1>
       <p>My name is Jackson O'Connor, an aspiring game designer &par; Environmental and Level Design<br>are my focus and my method of expression.</p>
       <h2>Education</h2>
