--- a/index.html
+++ b/index.html
@@ -25,24 +25,25 @@
   <title>Jackson R. O'Connor's Resume</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
-    body {background-color: rgb(236, 236, 236); scrollbar-color: gray; font-family:'Times New Roman', Times, serif; color: black;}
-    h1 {color: black; font-weight: bold; text-align: center;}
-    h2 {color: black; font-weight: bold; text-align: center;}
-    p {color:rgb(22, 22, 22); font-weight: normal; text-align: center;}
+    body {background-color: rgb(236, 236, 236); scrollbar-color: gray; font-family:'Times New Roman', Times, serif; color: black; margin-top: 2cm;}
+    h1 {color: black; font-weight: bold; size: 120%;}
+    h2 {color: black; font-weight: bold;}
+    p {color:rgb(22, 22, 22); font-weight: normal;}
+    ul.myUl {display:inline-block; text-align: left;}
   </style>
   
 </head>
 <body>
-  <div class="container">
-    <span style="border: 0.2cm; overflow-inline: auto; border-top: 0.6cm;">
+  <div class="container" style="text-align: center;">
+    <span style="overflow-inline: auto;">
       <h1>Jackson Richard O'Connor</h1>
-      <p>My name is Jackson O'Connor, an aspiring game designer &par; Environmental and Level Design<br>are my focus and my method of expression.</p>
-      <h2>Education</h2>
-      <ul>
+      <p>My name is Jackson O'Connor, an aspiring game designer &par; Environmental and Level Design<br>are my focus and method for expression.<br></p>
+      <h2><br>Education<br></h2>
+      <ul class="myUl">
         <li>University of Texas at Dallas - BA in Animation and Games</li>
       </ul>
-      <h2>Employment</h2>
-      <ul>
+      <h2><br>Employment<br></h2>
+      <ul class="myUl">
         <li><a rel="https://tomthumb.com">TomThumb</a> - Courtesy Clerk - 3 Years &VerticalLine;Ongoing&VerticalLine;;</li>
       </ul>
     </span>
