--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <style>
     body {background-color: rgb(236, 236, 236); scrollbar-color: gray; font-family:'Times New Roman', Times, serif; color: black; margin-top: 2cm;}
     h1 {color: black; font-weight: bold; size: 120%;}
-    h2 {color: black; font-weight: bold;}
+    h2 {color: black; font-weight: bold; text-decoration: underline;}
     p {color:rgb(22, 22, 22); font-weight: normal;}
     ul.myUl {display:inline-block; text-align: left;}
   </style>
@@ -44,7 +44,7 @@
       </ul>
       <h2><br>Employment<br></h2>
       <ul class="myUl">
-        <li><a rel="https://tomthumb.com">TomThumb</a> - Courtesy Clerk - 3 Years &VerticalLine;Ongoing&VerticalLine;;</li>
+        <li><a rel="https://tomthumb.com">TomThumb</a> - Courtesy Clerk - 3 Years &VerticalLine;Ongoing&VerticalLine;</li>
       </ul>
     </span>
   </div>
