another time because the deployment is bugging out and showing prior deployment

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="container" style="text-align: center;">
     <span style="overflow-inline: auto;">
       <h1>Jackson Richard O'Connor</h1>
-      <p>My name is Jackson O'Connor, an aspiring game designer &par; Environmental and Level Design<br>are my focus and method for expression.<br></p>
+      <p>My name is Jackson O'Connor, an aspiring game designer &par; Environmental and Level Design<br>are my focus and method for artistic expression.<br></p>
       <h2><br>Education<br></h2>
       <ul class="myUl">
         <li>University of Texas at Dallas - BA in Animation and Games</li>
