--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
 
   <title>Jackson R. O'Connor's Resume</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=PT+Serif+Caption:ital@0;1&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
   <style>
     body {background-color: rgb(236, 236, 236); scrollbar-color: gray; font-family:'Times New Roman', Times, serif; color: black; margin-top: 2cm;}
-    h1 {color: black; font-weight: bold; size: 120%;}
-    h2 {color: black; font-weight: bold; text-decoration: underline;}
-    p {color:rgb(22, 22, 22); font-weight: normal;}
+    h1 {color: black; font-weight: bold; size: 130%; font-family: "PT Serif Caption";}
+    h2 {color: black; font-weight:bolder; size: 90%; text-decoration: underline; font-family: "Roboto Flex";}
+    p {color:rgb(22, 22, 22); font-weight: normal; font-family: "Roboto Flex";}
     ul.myUl {display:inline-block; text-align: left;}
   </style>
   
